# financial-rag-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  config.py
src/document_processing/: chunker.py  loader.py
src/rag_chain/: __init__.py  chain.py
src/vectorstore/: embeddings.py  store.py
streamlit_app/: app.py
tests/: test_document_processing.py
